[package]
name = "stop-token"
version = "0.1.2"
authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/async-rs/stop-token"

description = "Experimental cooperative cancellation for async-std"

[dependencies]
futures-intrusive = "0.3"
pin-project-lite = "0.1.0"
pin-utils = "0.1.0-alpha"
tokio = { version = "0.2", features = ["stream"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
